# blnk-lite

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  ACP_OFFERING.json  ACP_OPTIMIZATION.md  ACP_REGISTRATION.md  ACP_REGISTRATION_SUMMARY.md  AGDP_COMPLETION.md  AGDP_PROFILE.md  AGDP_REGISTRATION.md  AGENT.md  AGENT_PROFILE.md  ALCHEMY_NEXT_STEPS.md  AUDIT_APPLICATION.md  BRAND_ASSETS.md  BRAND_DESIGN_SPEC.md  BUG_BOUNTY.md  CHANGELOG.md  COMMUNITY_GUIDELINES.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  Dockerfile  INCIDENT_RESPONSE.md  LAUNCHPAD_APPLICATION.md  LAUNCHPAD_CHECKLIST.md  LAUNCH_CHECKLIST.md  LAUNCH_PACKAGE.md  LICENSE  LIQUIDITY_GUIDE.md  MARKETING_PACKAGE.md  MULTISIG_SETUP.md  NEXT_STEPS.md  OPERATIONS.md  PLAN.md  PRICING_RESTRUCTURE.md  PROGRESS.md  README.md  ROADMAP.md  SECURITY_VERIFICATION.md  (+16 more)
.github/: pull_request_template.md
Reference/: issuer-friendly-tokenomics.md  research-2026-02-23.md  research-2026-02-24.md  tokenomics-analysis.md
contracts/: BLNKLiquidityManager.sol  BLNKToken.sol  (+2 more)
src/: cache.js  (+31 more)
src/modules/hft-risk-api/: Cargo.toml  README.md  build.sh
src/modules/hft-risk-api/benches/: api_latency.rs  risk_engine.rs
src/modules/hft-risk-api/benchmarks/: README.md
src/modules/hft-risk-api/config/: .env.example
src/modules/hft-risk-api/docs/: README.md  architecture.md  phase1-report.md
src/modules/hft-risk-api/src/: main.rs
src/modules/hft-risk-api/src/cache/: mod.rs
src/modules/hft-risk-api/src/config/: mod.rs
src/modules/hft-risk-api/src/handlers/: mod.rs  risk_handler.rs
src/modules/hft-risk-api/src/models/: mod.rs
src/modules/hft-risk-api/src/pool/: mod.rs
src/modules/hft-risk-api/src/risk/: engine.rs  mod.rs
src/modules/hft-risk-api/src/scanner/: mod.rs
src/modules/hft-risk-api/src/scanner/rules/: mod.rs
src/modules/hft-risk-api/src/tests/: mod.rs
(+112 files in other folders)
